# workrag

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/career_os/: config.py  main.py
src/career_os/agents/: application_strategy.py  browser_application.py  document_generation.py  job_dedup.py  job_discovery.py  job_extraction.py  job_matching.py  job_ranking.py  job_verification.py  orchestrator.py  profile_ingestion.py  profile_rag.py
src/career_os/api/: routes_applications.py  routes_approval.py  routes_email.py  routes_jobs.py  routes_profile.py
src/career_os/browser/: field_mapping.py  safety.py  session.py
src/career_os/core/: audit.py  exceptions.py  logging.py
src/career_os/db/: models.py  session.py
src/career_os/email/: classifier.py  oauth.py
src/career_os/llm/: factory.py
src/career_os/rag/: chunker.py  embeddings.py  retriever.py  vectorstore.py
src/career_os/schemas/: application.py  email.py  job.py  profile.py
src/career_os/security/: content_sanitizer.py  prompt_injection.py  url_safety.py
src/career_os/sources/: ashby.py  base.py  greenhouse.py  lever.py  policy.py  rss.py  workday.py
tests/: conftest.py  test_browser_field_mapping.py  test_job_matching.py  test_job_verification.py  test_profile_ingestion.py  test_prompt_injection.py
