[project]
name = "ai-career-os"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "redis>=5.0",
  "pgvector>=0.3",
  "langgraph>=0.1.5",
  "langchain>=0.2",
  "langchain-community>=0.2",
  "langchain-ollama>=0.1",
  "playwright>=1.45",
  "beautifulsoup4>=4.12",
  "lxml>=5.2",
  "httpx>=0.27",
  "tenacity>=8.3",
  "tiktoken>=0.7",
  "pypdf>=4.2",
  "python-multipart>=0.0.9",
  "passlib[bcrypt]>=1.7",
  "python-jose[cryptography]>=3.3",
  "email-validator>=2.1",
  "structlog>=24.1",
]

[project.optional-dependencies]
# Only needed if you set LLM_PROVIDER=openai (the default, "ollama", is free).
openai = ["langchain-openai>=0.1"]
dev = ["pytest", "pytest-asyncio", "pytest-cov", "ruff", "mypy", "respx"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
